--- a/School-project/index.html
+++ b/School-project/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>SchoolProject</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/School-project/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.7edd457914d6bc8aea94.css"></head>
 <body>
